[gd_scene load_steps=2 format=3 uid="uid://c8q2vt5qjkuv7q"]

[ext_resource type="Script" path="res://scripts/ui/popups/templates/window_popup_template.gd" id="1_yvmqe"]

[node name="WindowPopupTemplate" type="Window"]
title = "弹窗标题"
initial_position = 2
size = Vector2i(500, 400)
exclusive = true
script = ExtResource("1_yvmqe")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
text = "弹窗内容"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "确定"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "取消"
